--- a/valle/audio_gui/templates/index.html
+++ b/valle/audio_gui/templates/index.html
@@ -22,7 +22,7 @@
 	input <audio controls="controls" src="" id="source"> </audio> </br>
 
 	output <audio controls="controls" src="" id="audio"> </audio>
-    <button id="regen"  class="btn btn-danger" onclick="regen(currentOutput)" >重新生成</button>
+    <!--button id="regen"  class="btn btn-danger" onclick="regen(currentOutput)" >重新生成</button-->
 
 
     <script src="{{ url_for('static', filename='recorder.js') }}"></script>
